Boldovane i formatirane vrednosti u promo tabelama

--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -112,7 +112,7 @@
                             Year
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row" data-label="ROPI abs last year">{{ row.ropiCashLastYear
-                            }} din</mat-cell>
+                            | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashThisYear">
@@ -120,7 +120,7 @@
                             Year
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row" data-label="ROPI abs this year">{{ row.ropiCashThisYear
-                            }} din</mat-cell>
+                            | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashDifference">
@@ -207,7 +207,7 @@
                             Year
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row" data-label="ROPI abs last year">{{ row.ropiCashLastYear
-                            }} din</mat-cell>
+                            | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashThisYear">
@@ -215,7 +215,7 @@
                             Year
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row" data-label="ROPI abs this year">{{ row.ropiCashThisYear
-                            }} din</mat-cell>
+                            | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashDifference">
