--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -135,7 +135,7 @@
                         <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Uplift
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row" data-label="Uplift">{{ format(row.uplift)
-                            }}</mat-cell>
+                            }}%</mat-cell>
                     </ng-container>
 
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -230,7 +230,7 @@
                         <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Uplift
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row" data-label="Uplift">{{ format(row.uplift)
-                            }}</mat-cell>
+                            }}%</mat-cell>
                     </ng-container>
 
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
