Ispravljeno positions / suggestions sto se nije videlo

--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -1,8 +1,8 @@
 <div style="margin:50px" *ngIf="positionCheck">
-  <label style="margin-right:10px">
-    <input type="radio" name="option" value="positions" (click)="toggleIsSuggestions('pos')"> Positions
+  <label style="margin-right:10px; color:black">
+    <input type="radio" name="option" value="positions" (click)="toggleIsSuggestions('pos')" > Positions
   </label>
-  <label>
+  <label style="color:black">
     <input type="radio" name="option" value="suggestions" (click)="toggleIsSuggestions('sug')"> Suggestions
   </label>
 </div>
