Price u promociji da nije obavezno

--- a/src/app/dialogs/promo-dialog/promo-dialog.component.html
+++ b/src/app/dialogs/promo-dialog/promo-dialog.component.html
@@ -112,7 +112,7 @@
         <div class="form">
             <mat-form-field appearance="fill">
                 <mat-label>Price</mat-label>
-                <input type="number" matInput [(ngModel)]="data.price" required name="price"
+                <input type="number" matInput [(ngModel)]="data.price"  name="price"
                     [disabled]="flag === 2 || flag === 3 || flag === 4 || flag === 5">
             </mat-form-field>
         </div>
