Dodato Net u fix investment

--- a/src/app/dialogs/promo-dialog/promo-dialog.component.html
+++ b/src/app/dialogs/promo-dialog/promo-dialog.component.html
@@ -103,7 +103,7 @@
 
         <div class="form">
             <mat-form-field appearance="fill">
-                <mat-label>Fix investment</mat-label>
+                <mat-label>Fix investment Net</mat-label>
                 <input type="number" matInput [(ngModel)]="data.expenses" required name="expenses"
                     [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
             </mat-form-field>
