--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -88,7 +88,7 @@
 
             <ng-container matColumnDef="expenses">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Fix
-                    inv.</mat-header-cell>
+                    investment Net</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.expenses }}</mat-cell>
             </ng-container>
 
