Prikaz podatak pri promeni switcha u promo dash

--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -149,7 +149,7 @@
                     criteria</mat-toolbar>
             </div>
 
-            <div *ngIf="showSecondTable && selectedRetailerForSecondTable != 'null'" class="container">
+            <div *ngIf="showSecondTable" class=" container">
                 <mat-table mat-table #table [dataSource]="promoAndRopiByProductCategoriesAndYearsSecondTable" matSort>
                     <ng-container matColumnDef="name">
                         <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name"
