Promo type promenjen u Reb (On/Off)

--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -82,7 +82,7 @@
 
             <ng-container matColumnDef="type">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Reb
-                    Type</mat-header-cell>
+                    (On/Off)</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.type }}</mat-cell>
             </ng-container>
 
