--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -183,7 +183,8 @@
                     </button>
                 </mat-header-cell>
                 <mat-cell class="action-cell" *matCellDef="let row; let i=index">
-                    <button *ngIf="type === 'PROMO_LIST' && row.confirmed" mat-icon-button color="primary">
+                    <button *ngIf="type === 'PROMO_LIST' && row.confirmed && !row.resultSale" mat-icon-button
+                        color="primary">
                         <mat-icon area-label="Actual">check_circle</mat-icon>
                     </button>
                     <button *ngIf="type === 'PROMO_LIST' && !row.confirmed && !row.declined" mat-icon-button
@@ -192,6 +193,9 @@
                     </button>
                     <button *ngIf="type === 'PROMO_LIST' && row.declined" mat-icon-button color="primary">
                         <mat-icon area-label="Declined">close</mat-icon>
+                    </button>
+                    <button *ngIf="type === 'PROMO_LIST' && row.resultSale" mat-icon-button color="primary">
+                        <mat-icon area-label="Finished">done_all</mat-icon>
                     </button>
                     <button *ngIf="type === 'PROMO_LIST'" mat-icon-button color="primary"
                         (click)="openDialog(6,false,row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, '', '', row.rebate, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, 0, row.gp2)">
@@ -210,7 +214,7 @@
                         (click)="openDialog(3,true, row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp2)">
                         <p style="color:red">Decline</p>
                     </button>
-                   
+
                     <button mat-icon-button color="primary"
                         *ngIf="type === 'PROMO_LIST' && !row.resultSale && calculateDiff(row.dateEnd) >= 3"
                         (click)="openDialog(4,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp2)">
