Comment u promo dialogu disable-ovan kad se brise pozicija

--- a/src/app/dialogs/promo-dialog/promo-dialog.component.html
+++ b/src/app/dialogs/promo-dialog/promo-dialog.component.html
@@ -226,10 +226,10 @@
         </div>
 
      
-        <div class="form" *ngIf="(flag===3 || flag===5) && data.comment && data.comment !='' ">
+        <div class="form" *ngIf="(flag===3 || flag===5) && data.comment && data.comment !=''">
             <mat-form-field>
                 <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
-                    cdkAutosizeMaxRows="200" placeholder="Comment" [disabled]="flag === 5" [(ngModel)]="data.comment"
+                    cdkAutosizeMaxRows="200" placeholder="Comment" [disabled]="flag === 5 || !isDeclined" [(ngModel)]="data.comment"
                     name="comment" required> </textarea>
             </mat-form-field>
         </div>
