Prikaz rebate (summarized/cascade) u dijalogu

--- a/src/app/dialogs/promo-dialog/promo-dialog.component.html
+++ b/src/app/dialogs/promo-dialog/promo-dialog.component.html
@@ -106,7 +106,7 @@
             <mat-form-field appearance="fill">
                 <mat-label>Reb (C/S)</mat-label>
                 <mat-select (selectionChange)="selectRebateType($event)" required name="rebateType"
-                    [value]="data.isRebateCascade" [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
+                    [value]="data.isRebateCascade ? 'Cascade' : (data.isRebateCascade==null ? '' : 'Summarized')" [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
                     <mat-option *ngFor="let rebateType of rebateTypes" [value]="rebateType">
                         {{rebateType}}
                     </mat-option>
